igw.tf
resource "aws_internet_gateway" "igw-1ab28672" {
    vpc_id = "vpc-c3b03aa8"

    tags {
    }
}
