vpc.tf
resource "aws_vpc" "vpc-c3b03aa8" {
    cidr_block           = "172.31.0.0/16"
    enable_dns_hostnames = true
    enable_dns_support   = true
    instance_tenancy     = "default"

    tags {
    }
}
